--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^8.0.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
