--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.1",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "jest": "^29.7.0",
